# PLN_com_letras_de_musicas

./: basic_stats.py  cleaner.py  deadfish.csv  deadfish_cleaned.csv  deadfish_stats.csv  nuvem.py  pyproject.toml  scrapper.py  visual.py
