[project]
name = "analise-deadfish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "parsel>=1.10.0",
    "pip>=25.2",
    "polars>=1.32.3",
    "pyqt6>=6.9.1",
    "spacy>=3.8.7",
    "wordcloud>=1.9.4",
]
